changed contents to fit more screen sizes

--- a/Project 1 - Milestone 1/assets/milestone_1.css
+++ b/Project 1 - Milestone 1/assets/milestone_1.css
@@ -11,6 +11,10 @@ body {
     color: whitesmoke;
 }
 
+#page-contents {
+    width: 80%;
+}
+
 .jumbotron {
     background-color: #7E8B95;
     margin-bottom: 0px;
