changed it so that you can only click on fav website if youre clicking on text or icon

--- a/Project 1 - Milestone 2/assets/milestone_2.css
+++ b/Project 1 - Milestone 2/assets/milestone_2.css
@@ -188,10 +188,16 @@ td {
     grid-area: youtube;
 }
 
+#favorite-website>div.content>div a {
+    display: block;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #favorite-website>div.content>div i {
     font-size: 35px;
-    text-align: center;
-    display: block;
+    color: #278ea5;
 }
 
 #course-projects {
