--- a/Project 1 - Milestone 2/assets/milestone_2_large_screens.css
+++ b/Project 1 - Milestone 2/assets/milestone_2_large_screens.css
@@ -261,3 +261,11 @@ img#school-banner {
 hr {
     display: none;
 }
+
+button {
+    background-color: #278ea5;
+    color: white;
+    border: none;
+    padding: .25 1em;
+    font-size: 15px;
+}
